<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/city"
            android:textColor="#0aad3f"
            android:textSize="15sp"
            android:padding="1dp"
            android:layout_weight="0.1"
            />
        <ImageView
            android:id="@+id/imageDay"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/tempDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_day"
            android:padding="1dp"
            android:textSize="15sp"
            android:textColor="#0aad3f"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/date"
            android:textSize="15sp"
            android:textColor="#0aad3f"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>
</LinearLayout>