<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mapView"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LocationWeatherFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/map_type_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFF"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mapView"
        app:rippleColor="#eff5ff"
        app:srcCompat="@drawable/ic_map_layers"
        tools:ignore="NotSibling,UnknownId" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_type_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:elevation="6dp"
        android:padding="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/map_type_FAB"
        app:layout_constraintTop_toTopOf="@+id/map_type_FAB">


        <View
            android:id="@+id/map_type_default_background"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/rounded_rectangle"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/map_type_default"
            app:layout_constraintEnd_toEndOf="@+id/map_type_default"
            app:layout_constraintStart_toStartOf="@+id/map_type_default"
            app:layout_constraintTop_toTopOf="@+id/map_type_default" />

        <ImageButton
            android:id="@+id/map_type_default"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/type_default"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/map_type_satellite_background"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/rounded_rectangle"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/map_type_satellite"
            app:layout_constraintEnd_toEndOf="@+id/map_type_satellite"
            app:layout_constraintStart_toStartOf="@+id/map_type_satellite"
            app:layout_constraintTop_toTopOf="@+id/map_type_satellite" />

        <ImageButton
            android:id="@+id/map_type_satellite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/type_default"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/map_type_terrain"
            app:layout_constraintStart_toEndOf="@+id/map_type_default"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/map_type_terrain_background"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/rounded_rectangle"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/map_type_terrain"
            app:layout_constraintEnd_toEndOf="@+id/map_type_terrain"
            app:layout_constraintStart_toStartOf="@+id/map_type_terrain"
            app:layout_constraintTop_toTopOf="@+id/map_type_terrain" />

        <ImageButton
            android:id="@+id/map_type_terrain"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/terrain"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/map_type"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/map_type_default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_map"
            android:textColor="#808080"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/map_type_default"
            app:layout_constraintStart_toStartOf="@+id/map_type_default"
            app:layout_constraintTop_toBottomOf="@+id/map_type_default" />

        <TextView
            android:id="@+id/map_type_satellite_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/satellite"
            android:textColor="#808080"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/map_type_satellite"
            app:layout_constraintStart_toStartOf="@+id/map_type_satellite"
            app:layout_constraintTop_toBottomOf="@+id/map_type_satellite" />

        <TextView
            android:id="@+id/map_type_terrain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/terrain"
            android:textColor="#808080"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/map_type_terrain"
            app:layout_constraintStart_toStartOf="@+id/map_type_terrain"
            app:layout_constraintTop_toBottomOf="@+id/map_type_terrain" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</fragment>

